# fastapi-vanilla

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
fastapi_vanilla/: main.py
