[tool.poetry]
name = "fastapi-vanilla"
version = "0.1.0"
description = ""
authors = ["carlosghabrous <carlos.ghabrous@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"
ruff = "^0.9.4"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
